--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,19 @@
 ---
 ---
 @charset "utf-8";
+
+// https://bitsofco.de/the-new-system-font-stack/
+$base-font-family: system-ui,
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  Roboto,
+  Oxygen-Sans,
+  Ubuntu,
+  Cantarell,
+  "Helvetica Neue",
+  sans-serif;
+
+body {
+  font-family: $base-font-family;
+}
