--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,3 +17,15 @@ $base-font-family: system-ui,
 body {
   font-family: $base-font-family;
 }
+
+.navbar {
+
+}
+
+.navbar-title {
+
+}
+
+.navbar-list {
+  float: right;
+}
