--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,8 +14,13 @@ $base-font-family: system-ui,
   "Helvetica Neue",
   sans-serif;
 
+$navbar-height: 48px;
+$navbar-font-size: 16px;
+
+
 body {
   font-family: $base-font-family;
+  padding-top: $navbar-height;
 }
 
 /*
@@ -24,11 +29,13 @@ body {
 
 .navbar {
   background: #111;
+  font-size: $navbar-font-size;
+  line-height: $navbar-font-size;
 }
 
 .pure-menu-link {
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding-top: ($navbar-height - $navbar-font-size) / 2;
+  padding-bottom: ($navbar-height - $navbar-font-size) / 2;
 }
 
 .navbar-title {
@@ -37,4 +44,12 @@ body {
 
 .navbar-list {
   float: right;
+}
+
+// http://stackoverflow.com/a/13184714/454094
+a.anchor {
+  display: block;
+  position: relative;
+  top: -$navbar-height;
+  visibility: hidden;
 }
