Full width images

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -53,3 +53,14 @@ a.anchor {
   top: -$navbar-height;
   visibility: hidden;
 }
+
+/*
+ * Images
+ */
+
+ .image-main,
+ .image-spacer {
+   img {
+     width: 100%;
+   }
+ }
