Add a bit of spacing to content sections

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -82,3 +82,13 @@ a.anchor {
   background-position-y: 50%;
   z-index: -1;
 }
+
+/*
+ * Content
+ */
+
+.content-section {
+  margin: 0 auto;
+  padding: 25px 80px;
+  max-width: 1024px;
+}
