--- a/assets/main.scss
+++ b/assets/main.scss
@@ -21,6 +21,10 @@ $navbar-font-size: 16px;
  * Base styles
  */
 
+html {
+  font-size: 18px;
+}
+
 body {
   padding-top: $navbar-height;
 }
@@ -29,6 +33,16 @@ body {
 html, button, input, select, textarea,
 .pure-g [class *= "pure-u"] {
   font-family: $base-font-family;
+}
+
+h2 {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.25em;
 }
 
 /*
