--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 <div class="pure-g">
-  <div class="image-main pure-u-1">
-    <div class="image-bg" style="background-image: url('{{ page.header_image_url }}');"></div>
+  <div class="pure-u-1-2">
+    <div class="image-bg" style="background-image: url('{{ page.header_image_url }}');">
+      <h1>Lebudo</h1>
+    </div>
   </div>
 
-  <div class="content-section pure-u-1">
-    {{ content | markdownify }}
-  </div>
-
-  <div class="image-spacer pure-u-1">
-    <div class="image-bg image-bg-parallax" style="background-image: url('{{ page.footer_image_url }}');"></div>
+  <div class="pure-u-1-2">
+    <div class="content-section">
+      {{ content | markdownify }}
+    </div>
   </div>
 </div>
