--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,6 +11,7 @@ layout: default
 
     <div class="flexChild rowParent">
       <div class="content-section flexChild">
+        {% include navbar.html %}
         {{ content | markdownify }}
       </div>
     </div>
