--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,11 +19,15 @@ $base-font-family: system-ui,
  */
 
 html {
+  margin: 0;
+  padding: 0;
   font-size: 18px;
   height: 100%;
 }
 
 body {
+  margin: 0;
+  padding: 0;
   min-height: 100%;
 }
 
