--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,8 +23,8 @@ layout: default
     width: 50%;
     height: 100%;
   ">
-    <div class="content-section">
-      {% include navbar.html %}
+    {% include navbar.html %}
+    <div class="page-content">
       {{ content | markdownify }}
     </div>
   </div>
