--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,16 +32,6 @@ body {
   min-height: 100%;
 }
 
-h2 {
-  font-weight: normal;
-  font-size: 1.8rem;
-}
-
-p {
-  font-size: 18px;
-  line-height: 1.25em;
-}
-
 /*
  * Images
  */
@@ -57,10 +47,20 @@ p {
 }
 
 /*
- * Content
+ * Page markdown content
  */
 
-.content-section {
+.page-content {
   margin: 0 auto;
   padding: 25px 80px;
+
+  h2 {
+    font-weight: normal;
+    font-size: 1.8rem;
+  }
+
+  p {
+    font-size: 18px;
+    line-height: 1.25em;
+  }
 }
