--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,15 @@ layout: default
     height: 100%;
   ">
     <div class="image-bg" style="background-image: url('{{ page.background_image }}');">
-      <h1>Lebudo</h1>
+      <h1 style="
+        position: absolute;
+        top: 30px;
+        left: 40px;
+        margin: 0;
+        padding: 0;
+      ">
+        Lebudo
+      </h1>
     </div>
   </div>
 
