Use white text on left side

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -68,6 +68,8 @@ body {
   position: absolute;
   top: $full-page-padding-vertical;
   left: $full-page-padding-horizontal;
+
+  color: white;
 }
 
 .timetables {
@@ -77,6 +79,8 @@ body {
   position: absolute;
   bottom: $full-page-padding-vertical;
   left: $full-page-padding-horizontal;
+
+  color: white;
 }
 
 .image-bg {
