Link title to root

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,9 +4,11 @@ layout: default
 <div>
   <div class="left-side">
     <div class="image-bg" style="background-image: url('{{ page.background_image }}');">
-      <h1 class="title">
-        Lebudo
-      </h1>
+      <a href="{{ site.url }}">
+        <h1 class="title">
+          Lebudo
+        </h1>
+      </a>
       <dl class="timetables">
         <h4>Harjoitusajat kevät 2017</h4>
         <dt>Maanantai</dt>
