--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
     <div class="image-bg" style="background-image: url('{{ page.background_image }}');">
       <a href="{{ site.url }}">
         <h1 class="title">
-          Lebudo
+          {{ site.title }}
         </h1>
       </a>
       <dl class="timetables">
