--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
-<nav>
+<nav class="navigation">
   {% for page in site.pages %}
     {% if page.title %}
-      <a href="{{ page.url }}">
+      <a href="{{ page.url }}" class="navigation-item">
         {{ page.title | escape }}
       </a>
     {% endif %}
