--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,13 @@
+{% assign current = page.url %}
+
 <nav class="navigation">
   {% for page in site.pages %}
     {% if page.title %}
       <a href="{{ page.url }}" class="navigation-item">
         {{ page.title | escape }}
+        {% if current == page.url %}
+          <span class="navigation-indicator"></span>
+        {% endif %}
       </a>
     {% endif %}
   {% endfor %}
