--- a/assets/main.scss
+++ b/assets/main.scss
@@ -124,6 +124,18 @@ body {
   line-height: $top-bar-line-height;
 }
 
+.navigation-indicator {
+  display: block;
+  height: 3px;
+  width: 70%;
+  margin: {
+    top: 4px;
+    left: auto;
+    right: auto;
+  };
+  background-color: $scarlet-two;
+}
+
 /*
  * Page markdown content
  */
