Show a light indicator on navbar item focus

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -124,7 +124,10 @@ body {
   line-height: $top-bar-line-height;
 }
 
-.navigation-indicator {
+.navigation-item:not(.navigation-item-current):hover::after,
+.navigation-item:not(.navigation-item-current):focus::after,
+.navigation-item.navigation-item-current::after {
+  content: "";
   display: block;
   height: 3px;
   width: 70%;
@@ -133,6 +136,10 @@ body {
     left: auto;
     right: auto;
   };
+  background-color: $light-grey;
+}
+
+.navigation-item.navigation-item-current::after {
   background-color: $scarlet-two;
 }
 
