--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,11 +3,17 @@
 <nav class="navigation">
   {% for page in site.pages %}
     {% if page.title %}
-      <a href="{{ page.url }}" class="navigation-item">
+
+      <a
+        href="{{ page.url }}"
+        class="
+          navigation-item
+          {% if current == page.url %}
+            navigation-item-current
+          {% endif %}
+        "
+      >
         {{ page.title | escape }}
-        {% if current == page.url %}
-          <span class="navigation-indicator"></span>
-        {% endif %}
       </a>
     {% endif %}
   {% endfor %}
