--- a/assets/main.scss
+++ b/assets/main.scss
@@ -97,6 +97,7 @@ body {
 .image-bg {
   width: 100%;
   height: 100%;
+  background-color: $dark-grey;
   background-size: cover;
   background-position-x: 50%;
   background-position-y: 50%;
