Give navigation some space on the sides

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -115,7 +115,7 @@ body {
     right: $full-page-padding-horizontal;
   };
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .navigation-item {
