Consolidate scarlet shades

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,6 @@
 $dark-grey: #4a4a4a;
 $light-grey: #d8d8d8;
 $scarlet: #c30016;
-$scarlet-two: #d0011b;
 
 // https://bitsofco.de/the-new-system-font-stack/
 $base-font-family: system-ui,
@@ -142,7 +141,7 @@ body {
 }
 
 .navigation-item.navigation-item-current::after {
-  background-color: $scarlet-two;
+  background-color: $scarlet;
 }
 
 /*
