Style timetable list

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,7 +21,7 @@ layout: default
         </h1>
       </a>
       <dl class="timetables">
-        <h4>Harjoitusajat kevät 2017</h4>
+        <h4 class="timetables-heading">Harjoitusajat kevät 2017</h4>
         <dt>Maanantai</dt>
         <dd>16.30-18.00 Iaido</dd>
         <dd>19.00-21.30 Kendo</dd>
