--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -49,7 +49,7 @@ layout: default
     <div class="page-content">
       <h2>
         {{ page.title }}
-        <span class=highlight>
+        <span class="heading-highlight">
           {{ page.subtitle }}
         </span>
       </h2>
