--- a/assets/main.scss
+++ b/assets/main.scss
@@ -176,6 +176,11 @@ body {
     text-transform: uppercase;
   }
 
+  .heading-highlight {
+    color: $scarlet;
+    margin-left: 10px;
+  }
+
   p {
     margin: {
       top: 36px;
@@ -185,9 +190,5 @@ body {
     };
     font-size: 18px;
     line-height: 1.25em;
-  }
-
-  .highlight {
-    color: $scarlet;
   }
 }
