Replace navigation_ordinal with position
Allows pages to be reordered in Siteleaf

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 {% assign current = page.url %}
-{% assign pages = site.pages | sort: 'navigation_ordinal' %}
+{% assign pages = site.pages | sort: 'position' %}
 
 <nav class="navigation">
   {% for page in pages %}
