--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,6 +24,20 @@ $full-page-padding-horizontal: 60px;
 
 $top-bar-line-height: 30px;
 
+$screen-breakpoint: 768px;
+
+@mixin small-only {
+  @media screen and (max-width: $screen-breakpoint - 1px) {
+    @content;
+  }
+}
+
+@mixin large-only {
+  @media screen and (min-width: $screen-breakpoint) {
+    @content;
+  }
+}
+
 /*
  * Base styles
  */
