--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,10 +15,8 @@ layout: default
           ),
           url('{{ page.background_image }}');
     ">
-      <a href="{{ site.url }}">
-        <h1 class="title">
-          {{ site.title }}
-        </h1>
+      <a class="title" href="{{ site.url }}">
+        {{ site.title }}
       </a>
     </div>
   </div>
