--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,7 @@
 
 @charset "utf-8";
 
+$darker-grey: #212121;
 $dark-grey: #4a4a4a;
 $light-grey: #d8d8d8;
 $scarlet: #c30016;
@@ -130,7 +131,7 @@ body {
   }
 
   @include small-only {
-    background: black;
+    background: $darker-grey;
     width: 100%;
   }
 
@@ -158,11 +159,15 @@ body {
 .image-bg {
   width: 100%;
   height: 100%;
-  background-color: $dark-grey;
+  background-color: $darker-grey;
   background-size: cover;
   background-position-x: 50%;
   background-position-y: 100%;
   z-index: -1;
+
+  @include small-only {
+    background-image: none !important;
+  }
 }
 
 /*
