Loop through time entries

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,23 +36,13 @@ layout: default
 
   <dl class="timetables">
     <h4 class="timetables-heading">Harjoitusajat kevät 2017</h4>
-    <dt>Maanantai</dt>
-    <dd>16.30-18.00 Iaido</dd>
-    <dd>19.00-21.30 Kendo</dd>
-
-    <dt>Tiistai</dt>
-    <dd>19.00-21.30 Kendo</dd>
-
-    <dt>Keskiviikko</dt>
-    <dd>19-21.30 Jodo (aloittelijat)</dd>
-
-    <dt>Torstai</dt>
-    <dd>20-22.00 Iaido</dd>
-
-    <dt>Perjantai</dt>
-    <dd>19-21.30 Kendo</dd>
-
-    <dt>Lauantai</dt>
-    <dd>15-17.00 Iaido</dd>
+    {% for time_entry in site.timetables %}
+      {% if time_entry.times.size > 0 %}
+        <dt>{{ time_entry.day }}</dt>
+        {% for time in time_entry.times %}
+          <dd>{{ time }}</dd>
+        {% endfor %}
+      {% endif %}
+    {% endfor %}
   </dl>
 </div>
