--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,41 +3,8 @@
 
 @charset "utf-8";
 
-$darker-grey: #212121;
-$dark-grey: #4a4a4a;
-$light-grey: #d8d8d8;
-$scarlet: #c30016;
-
-// https://bitsofco.de/the-new-system-font-stack/
-$base-font-family: system-ui,
-  -apple-system,
-  BlinkMacSystemFont,
-  "Segoe UI",
-  Roboto,
-  Oxygen-Sans,
-  Ubuntu,
-  Cantarell,
-  "Helvetica Neue",
-  sans-serif;
-
-$full-page-padding-vertical: 50px;
-$full-page-padding-horizontal: 60px;
-
-$top-bar-line-height: 30px;
-
-$screen-breakpoint: 770px;
-
-@mixin small-only {
-  @media screen and (max-width: $screen-breakpoint - 1px) {
-    @content;
-  }
-}
-
-@mixin large-only {
-  @media screen and (min-width: $screen-breakpoint) {
-    @content;
-  }
-}
+@import '_vars';
+@import '_navigation';
 
 /*
  * Base styles
@@ -168,47 +135,6 @@ body {
   @include small-only {
     background-image: none !important;
   }
-}
-
-/*
- * Navigation
- */
-
-.navigation {
-  margin: {
-    top: $full-page-padding-vertical;
-    left: $full-page-padding-horizontal;
-    right: $full-page-padding-horizontal;
-  };
-  display: flex;
-  justify-content: space-around;
-}
-
-.navigation-item {
-  color: $dark-grey;
-  font-weight: bold;
-  text-decoration: none;
-
-  line-height: $top-bar-line-height;
-}
-
-.navigation-item:not(.navigation-item-current):hover::after,
-.navigation-item:not(.navigation-item-current):focus::after,
-.navigation-item.navigation-item-current::after {
-  content: "";
-  display: block;
-  height: 3px;
-  width: 70%;
-  margin: {
-    top: 4px;
-    left: auto;
-    right: auto;
-  };
-  background-color: $light-grey;
-}
-
-.navigation-item.navigation-item-current::after {
-  background-color: $scarlet;
 }
 
 /*
