--- a/assets/main.scss
+++ b/assets/main.scss
@@ -77,7 +77,7 @@ body {
  */
 
 .title {
-  display: block;
+  display: inline-block;
   margin: 0;
   padding: {
     top: $full-page-padding-vertical;
