--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -60,8 +60,8 @@
 .navigation {
   margin: {
     top: $full-page-padding-vertical;
-    left: $full-page-padding-horizontal;
-    right: $full-page-padding-horizontal;
+    left: 5vw;
+    right: 5vw;
   };
   display: flex;
   justify-content: space-around;
