--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,6 +16,7 @@ layout: default
           url('{{ page.background_image }}');
     ">
       <a class="title" href="{{ site.url }}">
+        <img class="logo" src="/assets/lebudo-logo.svg" height="40" width="40" alt="" />
         {{ site.title }}
       </a>
     </div>
