Move timetable to data file

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,8 +36,8 @@ layout: default
   </div>
 
   <dl class="timetables">
-    <h4 class="timetables-heading">Harjoitusajat kevät 2017</h4>
-    {% for time_entry in site.timetables %}
+    <h4 class="timetables-heading">{{ site.data.timetable.heading }}</h4>
+    {% for time_entry in site.data.timetable.timetable %}
       {% if time_entry.times.size > 0 %}
         <dt>{{ time_entry.day }}</dt>
         {% for time in time_entry.times %}
