--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,7 +14,7 @@ html {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  font-family: $base-font-family;
+  font-family: var(--base-font-family);
   height: 100%;
   width: 100%;
   box-sizing: border-box;
@@ -47,7 +47,7 @@ body {
     top: 0;
     left: 0;
     bottom: 0;
-    width: $left-side-width;
+    width: var(--left-side-width);
     height: 100%;
     min-height: 640px;
   }
@@ -58,7 +58,7 @@ body {
     position: fixed;
     bottom: 0;
     left: 0;
-    width: $left-side-width;
+    width: var(--left-side-width);
   }
 }
 
@@ -68,7 +68,7 @@ body {
     top: 0;
     right: 0;
     bottom: 0;
-    width: $right-side-width;
+    width: var(--right-side-width);
     height: 100%;
   }
 }
@@ -81,13 +81,13 @@ body {
   display: inline-block;
   margin: 0;
   padding: {
-    top: $full-page-padding-vertical;
-    bottom: $full-page-padding-vertical;
-    left: $full-page-padding-horizontal;
-    right: $full-page-padding-horizontal;
+    top: var(--full-page-padding-vertical);
+    bottom: var(--full-page-padding-vertical);
+    left: var(--full-page-padding-horizontal);
+    right: var(--full-page-padding-horizontal);
   }
 
-  line-height: $top-bar-line-height;
+  line-height: var(--top-bar-line-height);
 
   color: white;
   font-size: 2rem;
@@ -97,7 +97,7 @@ body {
 }
 
 .logo {
-  height: $top-bar-line-height;
+  height: var(--top-bar-line-height);
   width: auto;
   vertical-align: bottom;
   margin-right: 5px;
@@ -106,20 +106,20 @@ body {
 .timetables {
   margin: 0;
   padding: {
-    top: $full-page-padding-vertical;
-    bottom: $full-page-padding-vertical;
-    left: $full-page-padding-horizontal;
-    right: $full-page-padding-horizontal;
+    top: var(--full-page-padding-vertical);
+    bottom: var(--full-page-padding-vertical);
+    left: var(--full-page-padding-horizontal);
+    right: var(--full-page-padding-horizontal);
   }
 
   @include small-only {
-    background: $darker-grey;
+    background: var(--darker-grey);
   }
 
   dt, dd {
     margin: 0;
     font-size: 16px;
-    color: $light-grey;
+    color: var(--light-grey);
   }
 
   dt {
@@ -134,7 +134,7 @@ body {
 .image-bg {
   width: 100%;
   height: 100%;
-  background-color: $darker-grey;
+  background-color: var(--darker-grey);
   background-size: cover;
   background-position-x: 30%;
   background-position-y: 0%;
@@ -159,12 +159,12 @@ body {
 
   @include small-only {
     margin: {
-      left: $full-page-padding-horizontal;
-      right: $full-page-padding-horizontal;
+      left: var(--full-page-padding-horizontal);
+      right: var(--full-page-padding-horizontal);
     }
   }
 
-  color: $dark-grey;
+  color: var(--dark-grey);
   word-wrap: break-word;
 
   h2 {
@@ -175,7 +175,7 @@ body {
   }
 
   .heading-highlight {
-    color: $scarlet;
+    color: var(--scarlet);
     margin-left: 10px;
   }
 
