--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -2,6 +2,7 @@
   font-family: Metropolis;
   font-style: normal;
   font-weight: 400;
+  font-display: optional;
   src: local('Metropolis Regular'),
     local('Metropolis-Regular'),
     url('/assets/fonts/Metropolis-Regular.woff2') format('woff2'),
@@ -12,6 +13,7 @@
   font-family: Metropolis;
   font-style: normal;
   font-weight: 700;
+  font-display: optional;
   src: local('Metropolis Bold'),
     local('Metropolis-Bold'),
     url('/assets/fonts/Metropolis-Bold.woff2') format('woff2'),
