Remove left margin from content

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -185,7 +185,7 @@ body {
       margin: {
         top: 36px;
         bottom: 36px;
-        left: 15%;
+        left: 0;
         right: 0;
       };
     }
