--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -64,7 +64,7 @@
     right: 5vw;
   };
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 
   @include small-only {
     margin: 0;
