--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -82,7 +82,9 @@
   font-weight: bold;
   text-decoration: none;
 
-  line-height: var(--top-bar-line-height);
+  @include large-only {
+    text-align: center;
+  }
 
   // Decorations, small screens
   @include small-only {
@@ -121,7 +123,7 @@
     height: 3px;
     width: 70%;
     margin: {
-      top: 4px;
+      top: 10px;
       left: auto;
       right: auto;
     };
