Fix CSS preload link

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -5,7 +5,7 @@
     {% if page.title %}{{ page.title | escape }} - {% endif %}{{ site.title | escape }}
   </title>
   <link rel="stylesheet" href="{{ "/assets/normalize.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}?{{ site.time | | date: "%s" }}">
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}?{{ site.time | date: "%s" }}">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
